feat: 아티클 수집 방식 구조 개선