@@ -1,15 +1,18 @@
 package com.bootsignal.domain.tech_article.service;
 
+import com.bootsignal.domain.tech_article.config.TechArticleRssProperties;
 import com.bootsignal.domain.tech_article.dto.ParsedRssArticle;
 import com.bootsignal.domain.tech_article.dto.TechArticleCollectResponse;
 import com.bootsignal.domain.tech_article.dto.TechArticleCollectResponse.SourceCollectResult;
 import com.bootsignal.domain.tech_article.entity.ArticleSource;
 import com.bootsignal.domain.tech_article.entity.TechArticle;
+import com.bootsignal.domain.tech_article.filter.TechArticleFilterKeywords;
 import com.bootsignal.domain.tech_article.repository.TechArticleRepository;
 import com.bootsignal.global.exception.BootSignalException;
 import com.bootsignal.global.exception.ErrorCode;
 import java.io.IOException;
-import java.util.Arrays;
+import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -21,16 +24,15 @@ public class TechArticleCollectService {
 
 	private final RssFeedParser rssFeedParser;
 	private final TechArticleRepository techArticleRepository;
+	private final TechArticleRssProperties rssProperties;
 
-	/* 기술 아티클 소스별 수집 */
+	/* RSS 피드에서 기술 아티클을 수집 */
 	@Transactional
 	public TechArticleCollectResponse collect(ArticleSource source) {
-		// source 쿼리 파라미터 기반 소스 설정 (미입력 시 전체 소스 수집)
 		List<ArticleSource> targets = source == null
-			? Arrays.asList(ArticleSource.values())
+			? List.of(ArticleSource.values())
 			: List.of(source);
 
-		// 소스별 수집 결과 조회
 		List<SourceCollectResult> results = targets.stream()
 			.map(this::collectSource)
 			.toList();
@@ -38,24 +40,31 @@ public class TechArticleCollectService {
 		return new TechArticleCollectResponse(results);
 	}
 
- 	// 기술 아티클 소스별 수집
+	// 소스별 아티클 수집
 	private SourceCollectResult collectSource(ArticleSource source) {
-		List<ParsedRssArticle> articles;
-		
-		// RSS 피드 가져오기 시도
+		List<ParsedRssArticle> fetchedArticles;
 		try {
-			articles = rssFeedParser.fetchAndParse(source);
+			fetchedArticles = rssFeedParser.fetchAndParse(source);
 		} catch (IOException e) {
 			throw new BootSignalException(ErrorCode.INTERNAL_SERVER_ERROR,
 				source + " RSS 피드를 가져오지 못했습니다: " + e.getMessage());
 		}
 
-		// 기술 아티클 소스별 수집 결과 조회
+		List<ParsedRssArticle> keywordMatched = fetchedArticles.stream()
+			.filter(article -> isWithinCollectPeriod(article.publishedAt()))
+			.filter(article -> TechArticleFilterKeywords.matchesTitle(article.title()))
+			.sorted(Comparator.comparing(ParsedRssArticle::publishedAt).reversed())
+			.toList();
+
+		List<ParsedRssArticle> articlesToSave = keywordMatched.stream()
+			.limit(rssProperties.collectLimit())
+			.toList();
+
 		int inserted = 0;
 		int updated = 0;
-		for (ParsedRssArticle article : articles) {
+		for (ParsedRssArticle article : articlesToSave) {
 			var existingOpt = techArticleRepository.findBySourceAndRssGuid(source, article.rssGuid());
-			if (existingOpt.isPresent()) { // 기존 아티클 존재 시 업데이트
+			if (existingOpt.isPresent()) {
 				TechArticle existing = existingOpt.get();
 				existing.updateFromRss(
 					article.title(),
@@ -66,21 +75,27 @@ public class TechArticleCollectService {
 					article.publishedAt()
 				);
 				updated++;
-			} else { // 기존 아티클 없으면 생성
-				techArticleRepository.save(TechArticle.builder()
-					.source(source)
-					.title(article.title())
-					.summary(article.summary())
-					.thumbnailUrl(article.thumbnailUrl())
-					.author(article.author())
-					.articleUrl(article.articleUrl())
-					.publishedAt(article.publishedAt())
-					.rssGuid(article.rssGuid())
-					.build());
+			} else {
+				techArticleRepository.save(article.toEntity(source));
 				inserted++;
 			}
 		}
 
-		return new SourceCollectResult(source, inserted, updated, articles.size());
+		int filteredOut = fetchedArticles.size() - keywordMatched.size();
+		return new SourceCollectResult(
+			source,
+			inserted,
+			updated,
+			fetchedArticles.size(),
+			filteredOut,
+			keywordMatched.size()
+		);
+	}
+
+	// 발행일이 수집 기준 개월 이내인지 확인
+	private boolean isWithinCollectPeriod(LocalDateTime publishedAt) {
+		LocalDateTime publishedAfter = LocalDateTime.now()
+			.minusMonths(rssProperties.collectWithinMonths());
+		return !publishedAt.isBefore(publishedAfter);
 	}
 }
